Adding talk 2 and starting release process

--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
 						Published: March 18th, 2017
 					</span>
 				</a>
+
+				<a class="card" href="Loklak.pdf" target="_blank">
+					<span class="card-header" style="background-image: url(Loklak.JPG);">
+						<span class="card-title">
+							<h3>Leveraging loklak for analytics with Twitter data and intro to AskSusi</h3>
+						</span>
+					</span>
+					<span class="card-summary">
+						Loklak is an open source P2P distributed system that scrapes and stores twitter data and provides open non restricted access to tweets. The power of social networks can be immense and can result in building AI systems and machine learning on this data can give interesting insights to data scientists. This workshop will focus on visualizing the data with Kibana, building applications using the loklak SDKs and an introduction to Ask Susi , the AI powered by Loklak.<br>
+						
+					<span class="card-meta">
+						Published: March 19th, 2017
+					</span>
+				</a>
 			</div>
+			<p class="center">
+				 <a href="https://engineers.sg/video/improving-fault-detection-and-real-time-detailed-analytics-with-telemetry-fossasia-2017--1494" class="btn btn-primary">Watch Telemetry Talk Online</a><br>
+				 <a href="https://engineers.sg/video/leveraging-loklak-for-analytics-with-twitter-data-and-intro-to-asksusi-fossasia-2017--1545" class="btn btn-info">Watch Loklak Talk Online</a>
+			</p>
 		</div>
 	</body>
 </html>
