Uppercase/lowercase image response bug

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</a>
 
 				<a class="card" href="Loklak.pdf" target="_blank">
-					<span class="card-header" style="background-image: url(Loklak.JPG);">
+					<span class="card-header" style="background-image: url(Loklak.jpg);">
 						<span class="card-title">
 							<h3>Leveraging loklak for analytics with Twitter data and intro to AskSusi</h3>
 						</span>
